--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MichalPniak/MichalPniak.github.io#readme",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "tailwindcss": "^3.0.23"
   }
 }
