--- a/package.json
+++ b/package.json
@@ -16,9 +16,5 @@
   "bugs": {
     "url": "https://github.com/MichalPniak/MichalPniak.github.io/issues"
   },
-  "homepage": "https://github.com/MichalPniak/MichalPniak.github.io#readme",
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "tailwindcss": "^3.0.23"
-  }
+  "homepage": "https://github.com/MichalPniak/MichalPniak.github.io#readme"
 }
